k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiops-fastapi
  namespace: aiops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aiops-fastapi
  template:
    metadata:
      labels:
        app: aiops-fastapi
    spec:
      containers:
        - name: aiops-fastapi
          image: yourdockerhubusername/aiops-fastapi:latest
          imagePullPolicy: IfNotPresent   # Use local image if available
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
