k8s/ai-anomaly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-anomaly-service
  namespace: aiops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-anomaly-service
  template:
    metadata:
      labels:
        app: ai-anomaly-service
    spec:
      containers:
      - name: ai-anomaly-service
        image: ai-anomaly-service:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: ai-anomaly-service
  namespace: aiops
  labels:
    app: ai-anomaly-service
spec:
  selector:
    app: ai-anomaly-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
