k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiops-fastapi-ingress
  namespace: aiops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: aiops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiops-fastapi-service
                port:
                  number: 80
